--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import '@fontsource/inter';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -65,3 +67,24 @@
   }
 }
 
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #f7f4ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #e0cbcb;
+    border-radius: 100vh;
+    border: 3px solid #f6f7ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #c0a0b9;
+  }
+}
